@@ -1,3 +1,7 @@
+Wed Oct 13 17:51:17 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * Merge patch from Ben Collins to fix windowresizing in dselect
+
 Tue Oct 12 17:15:08 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * don't die if we can't open a package in dpkg-scanpackages, just print
